// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewCourseButton snapshot default button 1`] = `
<Button
  as="a"
  disabled={false}
  href="marketingUrl"
>
  View Course
</Button>
`;

exports[`ViewCourseButton snapshot disabled button 1`] = `
<Button
  as="a"
  disabled={true}
  href="marketingUrl"
>
  View Course
</Button>
`;
